Edit: Added title

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>App</title>
-	</head>
+    <head>
+        <title>🐈 INFINITE FELINES 🐈</title>
+    </head>
 
-	<body>
-		<div id="root"></div>
-	</body>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
